# Resources
resources_sources = files(
  'org.gnomepomodoro.Pomodoro.gresource.xml',
)
resources = gnome.compile_resources(
  'org.gnomepomodoro.Pomodoro',
  resources_sources,
  c_name: 'resources',
)


# Common library
libgnome_pomodoro_sources = files(
  'integrations/freedesktop/interfaces.vala',
  'integrations/freedesktop/lock-screen-provider.vala',
  'integrations/freedesktop/notifications-provider.vala',
  'integrations/freedesktop/screen-saver-provider.vala',
  'integrations/freedesktop/sleep-monitor-provider.vala',
  'integrations/freedesktop/timezone-monitor-provider.vala',
  'integrations/gnome/idle-monitor-provider.vala',
  'integrations/gnome/interfaces.vala',
  'integrations/gnome/screen-saver-provider.vala',
  'core/action.vala',
  'core/action-list-model.vala',
  'core/action-manager.vala',
  'core/aggregated-entry.vala',
  'core/capability.vala',
  'core/capability-manager.vala',
  'core/capability-set.vala',
  'core/command.vala',
  'core/context.vala',
  'core/cycle.vala',
  'core/database.vala',
  'core/date-utils.vala',
  # 'core/desktop-extension.vala',
  'core/entry.vala',
  'core/event-producer.vala',
  'core/event.vala',
  'core/event-bus.vala',
  'core/expression.vala',
  'core/expression-parser.vala',
  'core/gap.vala',
  'core/gap-entry.vala',
  'core/idle-monitor.vala',
  'core/job.vala',
  'core/lock-screen.vala',
  'core/logger.vala',
  'core/matrix.vala',
  'core/notification-manager.vala',
  'core/presence.vala',
  'core/priority.vala',
  'core/provided-object.vala',
  'core/provider.vala',
  'core/provider-set.vala',
  'core/scheduler.vala',
  'core/screen-saver.vala',
  'core/session.vala',
  'core/session-entry.vala',
  'core/session-manager.vala',
  'core/session-manager-action-group.vala',
  'core/settings.vala',
  'core/sleep-monitor.vala',
  'core/sound-manager.vala',
  'core/sound.vala',
  'core/state.vala',
  'core/time-block.vala',
  'core/time-block-entry.vala',
  'core/timer.vala',
  'core/timer-action-group.vala',
  'core/timestamp.vala',
  'core/timezone-entry.vala',
  'core/timezone-history.vala',
  'core/timezone-monitor.vala',
  'core/utils.vala',
  'core/variables.vala',
)

libgnome_pomodoro = static_library(
  'gnome-pomodoro',
  libgnome_pomodoro_sources,
  dependencies: [
    gio_dep,
    gobject_dep,
    gom_dep,
    libm_dep,
    peas_dep,
    sqlite_dep,
    gsound_dep,
    gstreamer_dep,
    posix_dep,
    json_dep,
  ],
  include_directories: config_h_dir,
)

libgnome_pomodoro_dep = declare_dependency(
  link_with: libgnome_pomodoro,
  dependencies: [
    gio_dep,
    gobject_dep,
    gom_dep,
    peas_dep,
    gsound_dep,
    gstreamer_dep,
    posix_dep,
  ],
  include_directories: [
    # Include gnome-pomodoro.h
    include_directories('.'),
  ],
)


# The gnome-pomodoro binary
gnome_pomodoro_vala_sources = files(
  'application.vala',
  'main.vala',
  'service.vala',
  'capabilities/notifications.vala',
  'capabilities/sounds.vala',
  'views/about-window.vala',
  'views/action-edit-window.vala',
  'views/action-listboxrow.vala',
  'views/compact-timer-view.vala',
  'views/log-window.vala',
  'views/preferences-panel-actions.vala',
  'views/preferences-panel-appearance.vala',
  'views/preferences-panel-notifications.vala',
  'views/preferences-panel-sounds.vala',
  'views/preferences-panel-timer.vala',
  'views/preferences-window.vala',
  'views/screen-overlay.vala',
  'views/sound-chooser-window.vala',
  'views/stats-day-page.vala',
  'views/stats-month-page.vala',
  'views/stats-page.vala',
  'views/stats-view.vala',
  'views/stats-week-page.vala',
  'views/timer-view.vala',
  'views/window.vala',
  'widgets/accelerator.vala',
  'widgets/command-entryrow.vala',
  'widgets/condition-group-widget.vala',
  'widgets/condition-widget.vala',
  'widgets/gizmo.vala',
  'widgets/lightbox.vala',
  'widgets/log-scale.vala',
  'widgets/log-scale-row.vala',
  'widgets/monospace-label.vala',
  'widgets/preferences-sidebar.vala',
  'widgets/session-progress-bar.vala',
  'widgets/sidebar-row.vala',
  'widgets/size-stack.vala',
  'widgets/time-label.vala',
  'widgets/timer-control-buttons.vala',
  'widgets/timer-label.vala',
  'widgets/timer-progress-bar.vala',
  'widgets/utils.vala',
  'widgets/variable-popover.vala',
  'widgets/volume-slider.vala',
)
gnome_pomodoro_sources = [
  gnome_pomodoro_vala_sources,
  resources,
]

executable(
  'gnome-pomodoro',
  gnome_pomodoro_sources,
  dependencies: [
    libgnome_pomodoro_dep,
    gtk_dep,
    cairo_dep,
    graphene_dep,
    libadwaita_dep,
  ],
  include_directories: config_h_dir,
  install: true,
)
