# Resources
resources_sources = files(
  'org.gnomepomodoro.Pomodoro.gresource.xml',
)
resources = gnome.compile_resources(
  'org.gnomepomodoro.Pomodoro',
  resources_sources,
  c_name: 'resources',
)


# Common library
libgnome_pomodoro_sources = files(
  'integrations/freedesktop/interfaces.vala',
  'integrations/freedesktop/lock-screen-provider.vala',
  'integrations/freedesktop/notifications-provider.vala',
  'integrations/freedesktop/screen-saver-provider.vala',
  'integrations/freedesktop/sleep-monitor-provider.vala',
  'integrations/freedesktop/timezone-monitor-provider.vala',
  'integrations/gnome/extension-provider.vala',
  'integrations/gnome/idle-monitor-provider.vala',
  'integrations/gnome/interfaces.vala',
  'integrations/gnome/screen-saver-provider.vala',
  'integrations/portal/background-provider.vala',
  'integrations/portal/global-shortcuts-provider.vala',
  'integrations/portal/interfaces.vala',
  'integrations/portal/request.vala',
  'core/action.vala',
  'core/action-list-model.vala',
  'core/action-manager.vala',
  'core/background-manager.vala',
  'core/capability.vala',
  'core/capability-manager.vala',
  'core/capability-set.vala',
  'core/command.vala',
  'core/context.vala',
  'core/cycle.vala',
  'core/database.vala',
  'core/date-utils.vala',
  'core/event-producer.vala',
  'core/event.vala',
  'core/event-bus.vala',
  'core/expression.vala',
  'core/expression-parser.vala',
  'core/extension.vala',
  'core/gap.vala',
  'core/gap-entry.vala',
  'core/idle-monitor.vala',
  'core/job-queue.vala',
  'core/keyboard-manager.vala',
  'core/locale.vala',
  'core/lock-screen.vala',
  'core/logger.vala',
  'core/matrix.vala',
  'core/notification-manager.vala',
  'core/priority.vala',
  'core/provided-object.vala',
  'core/provider.vala',
  'core/provider-set.vala',
  'core/scheduler.vala',
  'core/screen-saver.vala',
  'core/session.vala',
  'core/session-entry.vala',
  'core/session-manager.vala',
  'core/session-manager-action-group.vala',
  'core/settings.vala',
  'core/sleep-monitor.vala',
  'core/sound-manager.vala',
  'core/sound.vala',
  'core/state.vala',
  'core/stats-entry.vala',
  'core/stats-manager.vala',
  'core/time-block.vala',
  'core/time-block-entry.vala',
  'core/timer.vala',
  'core/timer-action-group.vala',
  'core/timestamp.vala',
  'core/timezone-entry.vala',
  'core/timezone-history.vala',
  'core/timezone-monitor.vala',
  'core/utils.vala',
  'core/variables.vala',
)

libgnome_pomodoro = static_library(
  'gnome-pomodoro',
  libgnome_pomodoro_sources,
  dependencies: [
    gio_dep,
    gobject_dep,
    gom_dep,
    libm_dep,
    peas_dep,
    sqlite_dep,
    gsound_dep,
    gstreamer_dep,
    posix_dep,
    json_dep,
  ],
  include_directories: config_h_dir,
)

libgnome_pomodoro_dep = declare_dependency(
  link_with: libgnome_pomodoro,
  dependencies: [
    gio_dep,
    gobject_dep,
    gom_dep,
    peas_dep,
    gsound_dep,
    gstreamer_dep,
    posix_dep,
  ],
  include_directories: [
    # Include gnome-pomodoro.h
    include_directories('.'),
  ],
)


# The gnome-pomodoro binary
gnome_pomodoro_vala_sources = files(
  'capabilities/global-shortcuts.vala',
  'capabilities/notifications.vala',
  'capabilities/sounds.vala',
  'ui/main/dialogs/about-dialog.vala',
  'ui/main/dialogs/install-extension-dialog.vala',
  'ui/main/stats/charts/bar-chart.vala',
  'ui/main/stats/charts/bubble-chart.vala',
  'ui/main/stats/charts/canvas-layout.vala',
  'ui/main/stats/charts/canvas.vala',
  'ui/main/stats/charts/chart-axis.vala',
  'ui/main/stats/charts/chart-contents.vala',
  'ui/main/stats/charts/chart-grid.vala',
  'ui/main/stats/charts/chart.vala',
  'ui/main/stats/widgets/day-chooser.vala',
  'ui/main/stats/widgets/month-chooser.vala',
  'ui/main/stats/widgets/stats-card.vala',
  'ui/main/stats/widgets/stats-date-popover.vala',
  'ui/main/stats/widgets/week-chooser.vala',
  'ui/main/stats/stats-day-page.vala',
  'ui/main/stats/stats-month-page.vala',
  'ui/main/stats/stats-page.vala',
  'ui/main/stats/stats-view.vala',
  'ui/main/stats/stats-week-page.vala',
  'ui/main/timer/widgets/session-progress-bar.vala',
  'ui/main/timer/widgets/timer-control-buttons.vala',
  'ui/main/timer/widgets/timer-label.vala',
  'ui/main/timer/widgets/timer-progress-bar.vala',
  'ui/main/timer/compact-timer-view.vala',
  'ui/main/timer/timer-view.vala',
  'ui/main/window.vala',
  'ui/overlays/lightbox.vala',
  'ui/overlays/screen-overlay.vala',
  'ui/preferences/appearance/preferences-panel-appearance.vala',
  'ui/preferences/automation/action/action-edit-window.vala',
  'ui/preferences/automation/action/action-listboxrow.vala',
  'ui/preferences/automation/action/command-entryrow.vala',
  'ui/preferences/automation/action/condition-group-widget.vala',
  'ui/preferences/automation/action/condition-widget.vala',
  'ui/preferences/automation/action/variable-popover.vala',
  'ui/preferences/automation/log-window.vala',
  'ui/preferences/automation/preferences-panel-automation.vala',
  'ui/preferences/keyboard-shortcuts/accelerator-chooser-window.vala',
  'ui/preferences/keyboard-shortcuts/accelerator-row.vala',
  'ui/preferences/keyboard-shortcuts/accelerator.vala',
  'ui/preferences/keyboard-shortcuts/preferences-panel-keyboard-shortcuts.vala',
  'ui/preferences/notifications/preferences-panel-notifications.vala',
  'ui/preferences/preferences-window.vala',
  'ui/preferences/sounds/preferences-panel-sounds.vala',
  'ui/preferences/sounds/sound-chooser-window.vala',
  'ui/preferences/sounds/volume-slider.vala',
  'ui/preferences/timer/preferences-panel-timer.vala',
  'ui/preferences/widgets/preferences-sidebar.vala',
  'ui/widgets/checkmark.vala',
  'ui/widgets/gizmo.vala',
  'ui/widgets/log-scale-row.vala',
  'ui/widgets/log-scale.vala',
  'ui/widgets/monospace-label.vala',
  'ui/widgets/sidebar-row.vala',
  'ui/widgets/size-stack.vala',
  'ui/widgets/time-label.vala',
  'ui/utils.vala',
  'application.vala',
  'dbus-services.vala',
  'main.vala',
)
gnome_pomodoro_sources = [
  gnome_pomodoro_vala_sources,
  resources,
]

executable(
  'gnome-pomodoro',
  gnome_pomodoro_sources,
  dependencies: [
    libgnome_pomodoro_dep,
    gtk_dep,
    gtk_x11_dep,
    gtk_wayland_dep,
    cairo_dep,
    graphene_dep,
    libadwaita_dep,
  ],
  include_directories: config_h_dir,
  install: true,
)
